Compiler/tests/typing/bad/testfile-call-5.rs

fn foo(x: i32) {}
fn main() { let x = 42; foo(&x); }
